<resources>
    <string name="app_name">Omise</string>
    <string name="action_settings">Settings</string>

    <string name="generic_loading">Loading...</string>
    <string name="generic_error_title">Something went wrong</string>
    <string name="error_title">Error</string>
    <string name="generic_error_message">Something went wrong, please try again</string>
    <string name="charities">Charities</string>
    <string name="retry">Retry</string>
    <string name="ok">Ok</string>
    <string name="alert_positive">Ok</string>
    <string name="alert_negative">Cancel</string>
    <string name="donation">Donation</string>
    <string name="certificate">"CN=%s CA Certificate"</string>
    <string name="name">Name</string>
    <string name="credit_card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="expiration_date">Expiration date</string>
    <string name="security_code">Security code</string>
    <string name="amount">Amount in Bhat</string>
    <string name="donate">Pay</string>
    <string name="invaild_input">InValid Input</string>

    <string name="success_message">Donated Successfully to %s!</string>
    <string name="dismiss">Dismiss</string>
    <string name="payment_successfull">Payment succeed</string>

</resources>
